--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
     "extends": "@antfu",
     "rules": {
        "no-console": "off",
-       "no-unused-vars": "off"
+       "no-unused-vars": "off",
+       "@typescript-eslint/ban-ts-comment": "off"
     }
 }
